--- a/Data Wrangling.ipynb
+++ b/Data Wrangling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,17 +47,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Missing information on page 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# The Movie DB data pull\n",
     "\n",
@@ -89,14 +81,14 @@
     "            movie_dates.append(movie[\"release_date\"])\n",
     "        except(TypeError):\n",
     "            f = open(os.path.join(\"ErrorLogs\",\"TMDB_Pull_Error_Log.txt\"), \"a\")\n",
-    "            f.write(f'Missing information on page {page}\\n\")\n",
+    "            f.write(f'Missing information on page {page}\\n')\n",
     "            f.close()            \n",
     "    page=page+1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +145,7 @@
     "# pulls determines how many rows i want to iterate through. This is for testing purposes and will be removed in the \n",
     "\n",
     "i=1\n",
-    "pulls=100\n",
+    "pulls=900\n",
     "for index,row in Movie_df.iterrows():\n",
     "    params[\"t\"]=row[\"Title\"]\n",
     "    response=requests.get(omdb_url, params=params).json() \n",
@@ -200,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,10 +204,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
