--- a/Data Wrangling.ipynb
+++ b/Data Wrangling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,200 +12,87 @@
     "from pprint import pprint\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "\n",
-    "from api_keys import rapid_key, moviedb_key, omdb_key"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Data Pulls"
+    "from datetime import datetime\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Rapid API data pull\n",
-    "# EDB_url=\"https://ivaee-internet-video-archive-entertainment-v1.p.rapidapi.com/entertainment/search/\"\n",
-    "\n",
-    "# querystring = {\"YearRange_Start\":\"2005\",\"YearRange_End\":\"2020\",\"ReleaseTypes\":\"Theatrical_Limited_Release,Theatrical_Wide_Release\"}\n",
-    "\n",
-    "# headers = {\n",
-    "#     'x-rapidapi-host': \"ivaee-internet-video-archive-entertainment-v1.p.rapidapi.com\",\n",
-    "#     'x-rapidapi-key': rapid_key,\n",
-    "#     'content-type': \"application/json\"\n",
-    "#     }\n",
-    "\n",
-    "# response = requests.request(\"GET\", EDB_url, headers=headers, params=querystring).json()\n",
-    "\n",
-    "# pprint(response)\n"
+    "csvpath=os.path.join(\"Resources\",\"MovieData_PreCleanup.csv\")\n",
+    "movie_df=pd.read_csv(csvpath)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The Movie DB data pull\n",
-    "\n",
-    "tmdb_url=\"https://api.themoviedb.org/3/discover/movie?\"\n",
-    "params={\n",
-    "    \"api_key\":moviedb_key,\n",
-    "    \"primary_release_date.gte\":\"2005-01-01\",\n",
-    "    \"sort_by\":\"primary_release_date.desc\",\n",
-    "    \"primary_release_date.lte\":\"2020-01-01\",\n",
-    "    \"region\":\"US\",\n",
-    "    \"with_release_type\":\"2,3\",\n",
-    "    \"language\":\"en-US\"\n",
-    "}\n",
-    "movie_ids=[]\n",
-    "movie_titles=[]\n",
-    "movie_dates=[]\n",
-    "page=1\n",
-    "\n",
-    "# Repeat the api ping for each page in the query because each ping only returns 20 results\n",
-    "\n",
-    "while page<=500:\n",
-    "    params[\"page\"]=page\n",
-    "    response = requests.get(tmdb_url, params=params).json()\n",
-    "    \n",
-    "    for movie in response[\"results\"]:\n",
-    "        try:\n",
-    "            movie_ids.append(movie[\"id\"])\n",
-    "            movie_titles.append(movie[\"title\"])\n",
-    "            movie_dates.append(movie[\"release_date\"])\n",
-    "        except(TypeError):\n",
-    "            f = open(os.path.join(\"ErrorLogs\",\"TMDB_Pull_Error_Log.txt\"), \"a\")\n",
-    "            f.write(f'Missing information on page {page}\\n')\n",
-    "            f.close()            \n",
-    "    page=page+1\n"
+    "movie_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create the Initial Data Frame to use to pull from OMDB and export the data to a csv file\n",
-    "\n",
-    "Movie_df=pd.DataFrame({\"TMDB ID\":movie_ids,\"Title\":movie_titles,\"Release Date\":movie_dates})\n",
-    "export_file_path=os.path.join(\"Resources\",\"MovieTitles.csv\")\n",
-    "Movie_df.to_csv(export_file_path)\n"
+    "movie_df_copy=movie_df.copy()\n",
+    "movie_df_copy[\"Day of Release\"]=None\n",
+    "movie_df_copy[\"Month of Release\"]=None\n",
+    "movie_df_copy[\"Year of Release\"]=None\n",
+    "for index, row in movie_df_copy.iterrows():    \n",
+    "    movie_df_copy.loc[index,\"Day of Release\"]=datetime.strptime(row[\"Release Date\"], \"%Y-%m-%d\").strftime('%A')\n",
+    "    movie_df_copy.loc[index,\"Month of Release\"]=datetime.strptime(row[\"Release Date\"], \"%Y-%m-%d\").strftime('%B')\n",
+    "    movie_df_copy.loc[index,\"Year of Release\"]=datetime.strptime(row[\"Release Date\"], \"%Y-%m-%d\").strftime('%Y')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add Necessary Columns to data frame in order to stor additional info\n",
-    "\n",
-    "Movie_df[\"IMDB ID\"]=None\n",
-    "Movie_df[\"Rating\"]=None\n",
-    "Movie_df[\"Runtime\"]=None\n",
-    "Movie_df[\"Genre\"]=None\n",
-    "Movie_df[\"Director\"]=None\n",
-    "Movie_df[\"Writer\"]=None\n",
-    "Movie_df[\"Actors\"]=None\n",
-    "Movie_df[\"Plot\"]=None\n",
-    "Movie_df[\"Language\"]=None\n",
-    "Movie_df[\"Country\"]=None\n",
-    "Movie_df[\"Awards\"]=None\n",
-    "Movie_df[\"Poster\"]=None\n",
-    "Movie_df[\"IMDB Rating\"]=None\n",
-    "Movie_df[\"IMDB Votes\"]=None\n",
-    "Movie_df[\"Metascore\"]=None\n",
-    "Movie_df[\"Rating Dictionary\"]=None\n",
-    "Movie_df[\"Type\"]=None\n",
-    "Movie_df[\"DVD Release Date\"]=None\n",
-    "Movie_df[\"Box Office\"]=None\n",
-    "Movie_df[\"Production\"]=None"
+    "movie_df_copy.count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# OMDB API Data Pull\n",
-    "\n",
-    "omdb_url=\"http://www.omdbapi.com/?\"\n",
-    "params={\n",
-    "    \"apikey\":omdb_key\n",
-    "}\n",
-    "\n",
-    "# pulls determines how many rows i want to iterate through. This is for testing purposes and will be removed in the \n",
-    "\n",
-    "i=1\n",
-    "pulls=900\n",
-    "for index,row in Movie_df.iterrows():\n",
-    "    params[\"t\"]=row[\"Title\"]\n",
-    "    response=requests.get(omdb_url, params=params).json() \n",
-    "    try:\n",
-    "        Movie_df.loc[index,\"Rating\"]=response[\"Rated\"]\n",
-    "        Movie_df.loc[index,\"Runtime\"]=response[\"Runtime\"]\n",
-    "        Movie_df.loc[index,\"Genre\"]=response[\"Genre\"]\n",
-    "        Movie_df.loc[index,\"Director\"]=response[\"Director\"]\n",
-    "        Movie_df.loc[index,\"Writer\"]=response[\"Writer\"]\n",
-    "        Movie_df.loc[index,\"Actors\"]=response[\"Actors\"]\n",
-    "        Movie_df.loc[index,\"Plot\"]=response[\"Plot\"]\n",
-    "        Movie_df.loc[index,\"Language\"]=response[\"Language\"]\n",
-    "        Movie_df.loc[index,\"Country\"]=response[\"Country\"]\n",
-    "        Movie_df.loc[index,\"Awards\"]=response[\"Awards\"]\n",
-    "        Movie_df.loc[index,\"Poster\"]=response[\"Poster\"]\n",
-    "        Movie_df.loc[index,\"IMDB Rating\"]=response[\"imdbRating\"]\n",
-    "    #     Movie_df.loc[index,\"Metascore\"]=response[\"\"]\n",
-    "    #     Movie_df.loc[index,\"Rating Dictionary\"]=response[\"Ratings\"]\n",
-    "        Movie_df.loc[index,\"IMDB ID\"]=response[\"imdbID\"]\n",
-    "        Movie_df.loc[index,\"IMDB Votes\"]=response[\"imdbVotes\"]\n",
-    "        Movie_df.loc[index,\"Type\"]=response[\"Type\"]\n",
-    "        Movie_df.loc[index,\"DVD Release Date\"]=response[\"DVD\"]\n",
-    "        Movie_df.loc[index,\"Box Office\"]=response[\"BoxOffice\"]\n",
-    "        Movie_df.loc[index,\"Production\"]=response[\"Production\"]\n",
-    "    except(KeyError):\n",
-    "        f = open(os.path.join(\"ErrorLogs\",\"IMDB_Pull_Error_Log.txt\"), \"a\")\n",
-    "        f.write(f\"There was a problem with movie {row['TMDB ID']}\\n\")\n",
-    "        f.close()        \n",
-    "                \n",
-    "    #checks to see if the max number of pulls was reached and breaks out of the for loop if they have been\n",
-    "                \n",
-    "    if(i==pulls):\n",
-    "        break\n",
-    "    i=i+1\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Data Pull Complete: Data Wrangling Begins Now"
+    "movie_df_cleaned=movie_df_copy.loc[movie_df_copy['Revenue']!=0]\n",
+    "movie_df_cleaned=movie_df_cleaned.loc[movie_df_copy['Type']=='movie']\n",
+    "movie_df_cleaned[\"Release Date\"]=pd.to_datetime(movie_df_cleaned[\"Release Date\"])\n",
+    "movie_df_cleaned.drop(['Box Office', 'Type', 'Unnamed: 0','Rating Dictionary','Metascore'], axis=1, inplace=True)\n",
+    "movie_df_cleaned.sort_values([\"Release Date\"],inplace=True)\n",
+    "movie_df_cleaned.to_csv(os.path.join(\"Resources\",\"MovieData_Clean.csv\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Drops any rows that are missing more than 4 values and export the file\n",
-    "\n",
-    "Movie_df.dropna(thresh=4, inplace=True)\n",
-    "Movie_df.head(50)\n",
-    "Movie_df.to_csv(os.path.join(\"Resources\",\"MovieData_PreCleanup.csv\"))\n"
-   ]
+   "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
