Converted runtimes to integers in a new column

--- a/Data Wrangling.ipynb
+++ b/Data Wrangling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
        "[48593 rows x 26 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,43 +503,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "TMDB ID               3319\n",
-       "Title                 3319\n",
-       "Release Date          3319\n",
-       "Budget                3319\n",
-       "Revenue               3319\n",
-       "IMDB ID               3319\n",
-       "Rating                3128\n",
-       "Runtime               3297\n",
-       "Genre                 3316\n",
-       "Director              3313\n",
-       "Writer                3222\n",
-       "Actors                3301\n",
-       "Plot                  3294\n",
-       "Language              3308\n",
-       "Country               3317\n",
-       "Awards                2799\n",
-       "Poster                3286\n",
-       "IMDB Rating           3285\n",
-       "IMDB Votes            3285\n",
-       "DVD Release Date      2848\n",
-       "Production            3035\n",
-       "Day of Release        3319\n",
-       "Month of Release      3319\n",
-       "Year of Release       3319\n",
-       "Revenue (Millions)    3319\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'movie_df_copy' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-cfc6100bc66d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmovie_df_cleaned\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmovie_df_copy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmovie_df_copy\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Revenue'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m!=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m&\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnotnull\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmovie_df_copy\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Revenue'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mmovie_df_cleaned\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmovie_df_cleaned\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mmovie_df_cleaned\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Revenue (Millions)\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmovie_df_cleaned\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Revenue\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m1000000\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mmovie_df_cleaned\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmovie_df_cleaned\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mmovie_df_copy\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Type'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;34m'movie'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mmovie_df_cleaned\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Release Date\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_datetime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmovie_df_cleaned\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Release Date\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'movie_df_copy' is not defined"
+     ]
     }
    ],
    "source": [
@@ -550,7 +526,7 @@
     "movie_df_cleaned[\"Release Date\"]=pd.to_datetime(movie_df_cleaned[\"Release Date\"])\n",
     "movie_df_cleaned.drop(['Box Office', 'Type', 'Unnamed: 0','Rating Dictionary','Metascore'], axis=1, inplace=True)\n",
     "movie_df_cleaned.sort_values([\"Release Date\"],inplace=True)\n",
-    "movie_df_cleaned.count()"
+    "movie_df_cleaned[\"Budget\"].value_counts()"
    ]
   },
   {
