resolving notebook issues

--- a/Data Wrangling part 2.ipynb
+++ b/Data Wrangling part 2.ipynb
@@ -3111,12 +3111,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "movie_df_cleaned.to_csv(os.path.join(\"Resources\",\"MovieData_Clean.csv\"),index=False)"
+    "movie_df.to_csv(os.path.join(\"Resources\",\"MovieData_Clean.csv\"),index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
